update index html

--- a/portfolio.html
+++ b/portfolio.html
@@ -397,6 +397,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-submit">
+          <h3 class="connect">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
+          <div class="form-footer">
+            <form>
+              <input
+                class="mail-id"
+                type="email"
+                name="tel"
+                id="mail"
+                placeholder="E-mail"
+              />
+            </form>
+            <div class="div-footer">
+              <button class="btn-styles" type="submit">Підписатися</button>
+              <svg class="email-svg">
+                <use href="./image/symbol-defs.svg#icon-icon-send"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
