--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
         </div>
       </div>
     </footer>
+
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -484,26 +485,24 @@
               placeholder="Введіть текст"
             ></textarea>
           </div>
-          <label class="checkbox-label">
-            <input class="checkbox-input" type="checkbox" name="checkbox" />
-            <!-- <div class="checkbox-span"> -->
-            <svg class="checkbox-span" width="16" height="15">
-              <use
-                class="icon-done"
-                href="./image/symbol-defs.svg#icon-done"
-              ></use>
-              <use
-                class="icon-border"
-                href="./image/symbol-defs.svg#icon-border"
-              ></use>
-            </svg>
-            <!-- </div> -->
-            <span class="checkbox-text">
-              Погоджуюсь з розсилкою та приймаю
-              <a href="#">Умови договору</a>
-            </span>
-          </label>
-          <button class="btn-submit" type="submit">Відправити</button>
+          <div class="check-box">
+            <label class="checkbox-label">
+              <input class="checkbox-input" type="checkbox" name="checkbox" />
+              <span class="checkbox-span">
+                <svg class="checkbox-icon" width="16" height="15">
+                  <use
+                    class="icon-done"
+                    href="./image/symbol-defs.svg#icon-done"
+                  ></use>
+                </svg>
+              </span>
+              <span class="checkbox-text">
+                Погоджуюсь з розсилкою та приймаю
+                <a href="#">Умови договору</a>
+              </span>
+            </label>
+            <button class="btn-submit" type="submit">Відправити</button>
+          </div>
         </form>
       </div>
     </div>
